# OpenMuse

./: .gitignore  CHANGELOG.md  LEFTOVER_PARSING_SUMMARY.md  README.md  VIEWER_UPDATES.md  analyze_before_0x47.py  analyze_leftover_structure.py  analyze_leftovers.py  analyze_rawdata.py  check_battery.py  check_tag_at_start.py  data.json  data_accgyro.txt  demo.py  eeg_summary.csv  find_0x47_tags.py  find_accgyro_headers.py  inspect_leftovers.py  inspect_packets.py  packet_analysis.md  parse_leftover_chunks.py  pyproject.toml  test_decode.py  test_leftover_parsing.py  test_simple_tag_data.py  validate_decoder.py
MuseLSL3/: DECODER_README.md  __init__.py  cli.py  decode.py  decode_enhanced.py  decode_new.py  find.py  muse.py  record.py  stream.py  view.py
OpenMuse/: __init__.py  cli.py  decode.py  find.py  record.py  stream.py  view.py
assumptions/: 1_validate_packet_framing.py
data_raw/: data_p1034.txt  data_p1035.txt  data_p1044.txt  data_p1045.txt  data_p20.txt  data_p21.txt  data_p4129.txt  data_p50.txt  data_p51.txt  data_p61.txt
decoding_attempts/: FINAL_REPORT.md  INVESTIGATION_RESULTS.py  README.md  analyze_rawdata.py  imu_parsed.csv  old_decode.py  old_validate_decoder.py  test_decoder.py  test_decoder3.py  validate_ACCGYRO.py  validate_ACCGYRO2.py  validate_Battery.py  validate_Battery2.py  validate_GYROACC.py  validate_GYROACC2.py  validate_INFODATA.py  validate_OPTICS.py  validate_SUBPKT_DATA.py  validate_SUBPKT_ID.py  validate_SUBPKT_ID2.py  validate_SUBPKT_LEN.py  validate_SUBPKT_N.py  validate_Timestamp.py  validate_decoder.py  validate_structure.py  (+2 more)
(+66 files in other folders)
