[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MuseLSL3"
version = "0.1.0"
description = "Minimal utilities to find Muse EEG devices via BLE"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "bleak>=0.21.0",
]
authors = [{ name = "" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
MuseLSL3 = "MuseLSL3.cli:main"
